[package]
name = "terrain-rs-minivisualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
terrain = { git = "https://github.com/TadaTeruki/terrain-rs" }
terrain_visualizer = { git = "https://github.com/TadaTeruki/terrain-visualizer" }
rand = "0.8"
image = "0.24"

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData',
]